
Changelog
=========

2019.1.2 (unreleased)
---------------------

- Readd Office macro files into Office Connector editable MIME types. [Rotonen]
- Complete French translations of repository in examplecontent. [andresoberhaensli]


2019.1.1 (2019-02-26)
---------------------

- Hide system-actor in the my-notification listing. [phgross]
- Add `*.vsdx` to the base list of OC-editable types. [lgraf]
- Fix handling of valid terms in repository tree xlsx file. [njohner]
- Handle translations for block_inheritance in repository xlsx file. [njohner]
- Set default language for dossier overdue activity. [njohner]
- Fix display issue for livesearch rsults. [deiferni]


2019.1.0 (2019-02-19)
---------------------

- Lock dossier subtree during resolve transition. [lgraf]
- Prevent dossiers from being resolved twice. [lgraf]
- Fix subject-filter for personal overview. [elioschmutz]
- Handle empty responsible field when assigning task. [njohner]
- Add date string localization for sablon data. [njohner]
- Fixed the REST API scan-in end point for organization units with non-ASCII in their titles. [Rotonen]
- Set default language for task reminders. [njohner]
- Add a three-tier mechanism for mapping MIME types to Office Connector. [Rotonen]
- Suppress deletion events when filtering objects from copied subtrees. [lgraf]
- Avoid infinite loops when looking for parent dossiers. [lgraf]
- Make sure favorite button is in front of the watermark header. [njohner]
- Fix mail for task added activity with multiline comment. [njohner]
- Skip creation of the tasks pdf on resolve for dossiers without tasks. [phgross]
- Give View permission to Editors on mails. [njohner]
- Clear role assignments on contained object after forwarding creation. [njohner]
- Add custom sortable_title indexer to avoid cropping of content titles. [njohner]
- Testserver: add support for custom fixtures. [jone]
- Reindex and store additionally supported bumblebee documents. [elioschmutz]