@@ -5,6 +5,7 @@ Changelog
 2019.1.2 (unreleased)
 ---------------------
 
+- Readd Office template files into Office Connector editable MIME types. [Rotonen]
 - Readd Office macro files into Office Connector editable MIME types. [Rotonen]
 - Complete French translations of repository in examplecontent. [andresoberhaensli]
 
